# research_user_interest

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
conf/: param.ini
research_user_interest/: __init__.py
research_user_interest/model/: check.py  config.py  do_annoy.py  extract_text_info.py  get_data.py  get_pretrain_vector.py  make_graph.py  preprocess.py
research_user_interest/utils/: make_vector.py  swem.py  template.py  text_preprocess.py
test/unit_test/: test_sample.py
